--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -231,8 +231,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">Alex Mansell <span style="font-weight: bold;">2023</span></a></p>
       </footer>
 
     </div>
