--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -12,7 +12,7 @@
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar == 'true' %}
-        <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
+        <img src="images/profile-photo.jpg" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
 
         <!-- Your name is defined in the _config.yml file -->
@@ -39,7 +39,7 @@
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
+        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Say Hello! <span>&#9996;</span></a>
         {% elsif site.resume_looking_for_work == 'no' %}
         <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
         {% else %}
@@ -52,7 +52,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Experience</h2>
+          <h2>Latest experience</h2>
         </header>
 
         {% for job in site.data.experience %}
@@ -198,9 +198,9 @@
       <!-- begin Links -->
       <section class="content-section">
 
-        <header class="section-header">
+        <!-- <header class="section-header">
           <h2>Additional Links</h2>
-        </header>
+        </header> -->
 
         <div class="resume-item">
           <ul class="resume-item-list">
