--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -41,7 +41,7 @@
         {% if site.resume_looking_for_work == 'yes' %}
         <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Say Hello! <span>&#9996;</span></a>
         {% elsif site.resume_looking_for_work == 'no' %}
-        <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
+        <a class="contact-button not-looking no-print">I'm not looking for work right now. <span>&#x2618;</span></a>
         {% else %}
         {% endif %}
 
